--- a/views/index1.erb
+++ b/views/index1.erb
@@ -1,10 +1,9 @@
-
-<!-- <div class="tab-pane fade in active" id="about"> 
+<div class="tab-pane fade in active" id="about"> 
   
 
   <div id="this-carousel" class="carousel slide">
     <!-- Wrapper for slides -->
-    <!-- div class="carousel-inner">
+    <div class="carousel-inner">
       <div class="item active">
         <img src="/images/brl001.png" alt="...">
       </div>
@@ -21,10 +20,10 @@
         <img src="/images/brl003.png" alt="...">
       </div>
 
-    </div> -->
+    </div>
 
   <!-- Controls -->
-    <!-- <a class="left carousel-control" href="#this-carousel" data-slide="prev">
+    <a class="left carousel-control" href="#this-carousel" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
     </a>
     <a class="right carousel-control" href="#this-carousel" data-slide="next">
@@ -45,4 +44,3 @@
 <div class="tab-pane fade" id="contact">
   <%= erb :contact %>
 </div>
-
